--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neighbr/common",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A common utility package for neighbr aptms project",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -20,6 +20,9 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.629.0",
+    "@aws-sdk/lib-storage": "^3.629.0",
+    "@aws-sdk/s3-request-presigner": "^3.629.0",
     "@types/winston": "^2.4.4",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
