--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "del-cli ./dist/*",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "publish": "npm run publish-script",
+    "publish-script": "node publish.js"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "yargs": "^17.7.2"
   }
 }
