--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "clean": "del-cli ./dist/*",
     "build": "npm run clean && tsc",
-    "publish": "npm run publish-script",
-    "publish-script": "node publish.js"
+    "publish": "node publish.js"
   },
   "keywords": [],
   "author": "",
