chore(logging): increase logger verbosity to 'silly' level

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "del-cli ./dist/*",
     "build": "npm run clean && tsc",
-    "publish": "node publish.js"
+    "publish-script": "node publish.js"
   },
   "keywords": [],
   "author": "",
