chore:  minor changes in the response creator

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/s3-request-presigner": "^3.629.0",
     "@types/morgan": "^1.9.9",
     "@types/winston": "^2.4.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
